Cambio a Bases de datos en Skills
Cambio Porcentajes

--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
               </div>
 
               <div class="skill">
-                <h3>Fireworks</h3>
-                <div class="level" style="width:69%"></div>
-                <div class="rest" style="width:29%"></div>
-                <div class="hexagono" style="left:70%">
-                  <p>70%</p>
+                <h3>MySQL</h3>
+                <div class="level" style="width:50%"></div>
+                <div class="rest" style="width:49%"></div>
+                <div class="hexagono" style="left:50%">
+                  <p>50%</p>
                 </div>
               </div>
 
@@ -235,7 +235,7 @@
 
           <ul>
             <li>Desarrollador Web</li>
-            <li>Windows</li>
+            <li>Bases de datos</li>
             <li>Word</li>
             <li>Excel</li>
             <li>Power Point</li>
